sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:6: error: value togetValueCount is not a member of Int
  for( i <- 0 togetValueCount() -1){
              ^AlgInsertionSort:6: error: value - is not a member of Unit
  for( i <- 0 togetValueCount() -1){
                                ^AlgInsertionSort:7: error: not found: value temps
    temps = getValue(i)
    ^AlgInsertionSort:8: error: reassignment to val
    j = i
      ^AlgInsertionSort:9: error: not found: value x
    while( j > 0 & getValue(j - 1) > x){
                                     ^AlgInsertionSort:11: error: reassignment to val
      j = j - 1
        ^